--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -1,17 +1,17 @@
 name: Reformat
 
 on:
-  push:
+  pull_request:
     branches:
-      - master
-
-permissions: write-all
+      - feature/*
 
 jobs:
   formatting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v2
+        with:
+          ref: ${github.head.ref}
       - uses: axel-op/googlejavaformat-action@v3
         with:
           args: "--skip-sorting-imports --replace"
