--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -1,7 +1,7 @@
 name: Reformat
 
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - feature/*
 
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.ref }}
+        run: ls -al
       - uses: axel-op/googlejavaformat-action@v3
         with:
           args: "--skip-sorting-imports --replace"
