--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-        run: ls -al
+      - run: ls -al
       - uses: axel-op/googlejavaformat-action@v3
         with:
           args: "--skip-sorting-imports --replace"
