--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -10,9 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: echo running on branch ${GITHUB_REF##*/}
       - run: cd BOJ2480 && ls -al
       - uses: axel-op/googlejavaformat-action@v3
         with:
           args: "--skip-sorting-imports --replace"
           githubToken: ${{ secrets.TOKEN }}
-          commitMessage: "reformat"
+          commitMessage: "reformat java files"
