--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -9,9 +9,9 @@ jobs:
   formatting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event.pull_request.head.ref }}
       - run: echo running on branch ${GITHUB_REF##*/}
       - run: cd BOJ2480 && ls -al
       - uses: axel-op/googlejavaformat-action@v3
