--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - run: echo running on branch ${GITHUB_REF##*/}
       - run: cd BOJ2480 && ls -al
       - uses: axel-op/googlejavaformat-action@v3
@@ -17,3 +19,4 @@ jobs:
           args: "--skip-sorting-imports --replace"
           githubToken: ${{ secrets.TOKEN }}
           commitMessage: "reformat java files"
+      - run: git status
