--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -5,20 +5,28 @@ on:
     branches:
       - feature/*
 
-permissions: write-all
-
 jobs:
   formatting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out
+        uses: actions/checkout@v3
         with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: "refs/pull/${{ github.event.number }}/merge"
       - run: cd BOJ2480 && ls -al
-      - uses: axel-op/googlejavaformat-action@v3
+
+      - name: Create new branch
+        uses: peterjgrainger/action-create-branch@v2.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        with:
+          branch: "style/reformat"
+
+      - name: Reformat java files
+        uses: axel-op/googlejavaformat-action@v3
         with:
           args: "--skip-sorting-imports --replace"
           githubToken: ${{ secrets.TOKEN }}
           commitMessage: "reformat java files"
+
       - run: git status
