--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -13,17 +13,14 @@ jobs:
         uses: actions/checkout@v3
       - run: git branch --show-current
 
-      - name: Create PR
-        id: new-branch
-        uses: peter-evans/create-pull-request@v4
+      - name: Create branch if not exists
+        uses: peterjgrainger/action-create-branch@v2.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
-          token: ${{ secrets.TOKEN }}
-          title: Reformat
-          commit-message: reformat java files
-          branch: reformat/
-          base: feature/reformat
-          branch-suffix: timestamp
-          reviewers: oognuyh
+          branch: "reformat"
+          sha: "${{ github.head.sha }}"
+
       - run: git branch --show-current
 
       - name: Reformat java files
@@ -32,5 +29,17 @@ jobs:
           args: "--skip-sorting-imports --replace"
           githubToken: ${{ secrets.TOKEN }}
           commitMessage: "reformat java files"
+
+      - run: git branch --show-current
+
+      - name: Create PR
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: ${{ secrets.TOKEN }}
+          title: Reformat
+          commit-message: reformat java files
+          branch: reformat
+          base: feature/reformat
+          reviewers: oognuyh
 
       - run: git status
