--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -13,13 +13,18 @@ jobs:
         uses: actions/checkout@v3
       - run: git branch --show-current
 
+      - name: Show GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
       - name: Create branch if not exists
         uses: peterjgrainger/action-create-branch@v2.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
           branch: "reformat"
-          sha: "${{ github.head.sha }}"
+          sha: "${{ github.sha }}"
 
       - run: git branch --show-current
 
