--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -1,25 +1,20 @@
 name: Reformat
 
 on:
-  pull_request:
+  push:
     branches:
       - feature/*
-    types:
-      - closed
 
 jobs:
   formatting:
-    if: github.event.pull_request.merged && !contains(github.event.pull_request.labels.*.name, 'reformat')
     runs-on: ubuntu-latest
     steps:
       - name: Check out branch
         uses: actions/checkout@v3
-        with:
-          ref: ${{ github.head_ref }}
 
       - name: Show GitHub context
         env:
-          GITHUB_CONTEXT: ${{ toJSON(github) }}
+          GITHUB_CONTEXT: ${{ toJSON(github.event) }}
         run: echo "$GITHUB_CONTEXT"
 
       - name: Reformat java files
