maybe last last commit?

--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -41,10 +41,14 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           number: ${{ steps.cpr.outputs.pull-request-number }}
 
+      - name: Show GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github.repository) }}
+        run: echo "$GITHUB_CONTEXT"
+
       - name: Enable Pull Request Automerge
         if: steps.cpr.outputs.pull-request-operation == 'created'
         uses: peter-evans/enable-pull-request-automerge@v2
         with:
           token: ${{ secrets.TOKEN }}
           pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
-          merge-method: squash
