--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -47,15 +47,8 @@ jobs:
           GITHUB_CONTEXT: ${{ toJSON(github.repository) }}
         run: echo "$GITHUB_CONTEXT"
 
-      # - name: Enable Pull Request Automerge
-      #   if: steps.cpr.outputs.pull-request-operation == 'created'
-      #   uses: peter-evans/enable-pull-request-automerge@v2
-      #   with:
-      #     token: ${{ secrets.TOKEN }}
-      #     pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
-      #     merge-method: squash
-
       - name: Merge Pull Request
+        if: steps.cpr.outputs.pull-request-operation == 'created'
         uses: juliangruber/merge-pull-request-action@v1
         with:
           github-token: ${{ secrets.TOKEN }}
