fix java formatter action

--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -5,15 +5,51 @@ on:
     branches:
       - master
 
-permissions: write-all
-
 jobs:
   formatting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: axel-op/googlejavaformat-action@v3
+      - name: Check out branch
+        uses: actions/checkout@v3
+
+      - name: Show GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
+      - name: Reformat java files
+        uses: axel-op/googlejavaformat-action@v3
         with:
           args: "--skip-sorting-imports --replace"
           githubToken: ${{ secrets.TOKEN }}
-          commitMessage: "reformat"
+          skipCommit: true
+
+      - name: Create PR
+        id: cpr
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: ${{ secrets.TOKEN }}
+          title: reformat java files automatically
+          commit-message: reformat java files automatically
+          branch: reformat
+          delete-branch: true
+
+      - name: Auto approve
+        if: steps.cpr.outputs.pull-request-operation == 'created'
+        uses: juliangruber/approve-pull-request-action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          number: ${{ steps.cpr.outputs.pull-request-number }}
+
+      - name: Show GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github.repository) }}
+        run: echo "$GITHUB_CONTEXT"
+
+      - name: Merge Pull Request
+        if: steps.cpr.outputs.pull-request-operation == 'created'
+        uses: juliangruber/merge-pull-request-action@v1
+        with:
+          github-token: ${{ secrets.TOKEN }}
+          number: ${{ steps.cpr.outputs.pull-request-number }}
+          method: squash
