fix missing keys

--- a/.github/workflows/approve.yml
+++ b/.github/workflows/approve.yml
@@ -6,9 +6,12 @@ on:
       - feature/approve
 
 jobs:
-  - name: Auto approve
-    if: github.actor == github.repository_owner
-    uses: juliangruber/approve-pull-request-action@v1
-    with:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
-      number: ${{ github.event.number }}
+  approve:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Auto approve
+        if: github.actor == github.repository_owner
+        uses: juliangruber/approve-pull-request-action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          number: ${{ github.event.number }}
