add if statements

--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   formatting:
+    if: ${{ !contains(github.event.head_commit.message, 'automatically') }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out branch
@@ -38,13 +39,8 @@ jobs:
         if: steps.cpr.outputs.pull-request-operation == 'created'
         uses: juliangruber/approve-pull-request-action@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.TOKEN }}
           number: ${{ steps.cpr.outputs.pull-request-number }}
-
-      - name: Show GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJSON(github.repository) }}
-        run: echo "$GITHUB_CONTEXT"
 
       - name: Merge Pull Request
         if: steps.cpr.outputs.pull-request-operation == 'created'
