--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -6,6 +6,7 @@ on:
       - master
 
 jobs:
+  if: ${{ !contains(github.event.head_commit.message, 'automatically') }}
   formatting:
     runs-on: ubuntu-latest
     steps:
@@ -40,11 +41,6 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           number: ${{ steps.cpr.outputs.pull-request-number }}
-
-      - name: Show GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJSON(github.repository) }}
-        run: echo "$GITHUB_CONTEXT"
 
       - name: Merge Pull Request
         if: steps.cpr.outputs.pull-request-operation == 'created'
