--- a/.github/workflows/approve.yml
+++ b/.github/workflows/approve.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Auto approve
         uses: juliangruber/approve-pull-request-action@v1
         with:
-          github-token: ${{ secrets.TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           number: ${{ github.event.number }}
 
       - name: Show GitHub context
