fix can not approve your own pull request

--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -39,7 +39,7 @@ jobs:
         if: steps.cpr.outputs.pull-request-operation == 'created'
         uses: juliangruber/approve-pull-request-action@v1
         with:
-          github-token: ${{ secrets.TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           number: ${{ steps.cpr.outputs.pull-request-number }}
 
       - name: Merge Pull Request
